# time_series_analysis_book

./: .gitignore  README.md  pyproject.toml  pyproject.toml~
BSTM_folder/: 09b_fdk_probabilistic_BSTM.ipynb  pyproject.toml
deep_learning_folder/: 10_ba_deep_learning_ts.ipynb  10_fdk_deep_learning_ts.ipynb  pyproject.toml
deep_learning_folder/.ipynb_checkpoints/: 10_fdk_deep_learning_ts-checkpoint.ipynb
notebooks/: 01_fdk_TS_for_ML_chap_2_pollution.ipynb  03_fdk_TS_chap3.ipynb  05_fdk_TS_chapter_5.ipynb  06_fdk_TS_chapter_6.ipynb  07_fdk_ML_models_for_TS.ipynb  08_fdk_onlineML.ipynb  09_fdk_probabilistic_models_for_TS.ipynb  11_fdk_reinforcement_learning.ipynb  offline_likelihoods.py  priors.py
notebooks/.ipynb_checkpoints/: 01_fdk_TS_for_ML_chap_2_pollution-checkpoint.ipynb  03_fdk_TS_chap3-checkpoint.ipynb  05_fdk_TS_chapter_5-checkpoint.ipynb  06_fdk_TS_chapter_6-checkpoint.ipynb  08_fdk_onlineML-checkpoint.ipynb  09_fdk_probabilistic_models_for_TS-checkpoint.ipynb
