[tool.poetry]
name = "time_series_analysis_book"
version = "0.1.0"
description = ""
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
dython = "^0.7.0"
scipy = "^1.8.0"
numpy = "^1.22.2"
pandas = "^1.3.5"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
jupyterlab = "^3.2.9"
black = "^22.1.0"
nb-black = "^1.0.7"
statsmodels = "^0.13.2"
workalendar = "^16.3.0"
astral = "^2.2"
featuretools = {extras = ["tsfresh"], version = "^1.6.0"}
tsfresh = "^0.19.0"
pandas-datareader = "^0.10.0"
yfinance = "^0.1.70"
ruptures = "^1.1.6"
bayesian-changepoint-detection = "^0.2.dev1"
tslearn = "^0.5.2"
river = "^0.10.1"
plotly = "^5.8.1"
prophet = "^1.0.1"
pyFTS = "^1.6"
simpsom = "^2.0.1"
tensorflow-macos = "^2.9.2"
dill = "^0.3.5"


[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
