[tool.poetry]
name = "deep_learning_folder"
version = "0.1.0"
description = ""
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipykernel = "^6.15.1"
tensorflow-macos = "^2.9.2"
jupyterlab = "^3.4.4"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
nb-black = "^1.0.7"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
